--- a/.github/workflows/cachix.yaml
+++ b/.github/workflows/cachix.yaml
@@ -1,8 +1,8 @@
-name: "Build and Cache Nix Packages"
+name: "Build and Cache Nix Packages "
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   # pull_request:
 
 jobs:
