Added darwin and linux platforms

--- a/.github/workflows/cachix.yaml
+++ b/.github/workflows/cachix.yaml
@@ -1,4 +1,4 @@
-name: "Build and Cache Nix Packages "
+name: "Build and Cache Nix Packages"
 
 on:
   push:
@@ -7,7 +7,19 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    # Use a matrix to define the different build environments
+    strategy:
+      matrix:
+        # Define the variables for each job
+        include:
+          - os: ubuntu-latest
+            nix_system: x86_64-linux
+          - os: macos-14 # Apple Silicon (M1/M2) runner
+            nix_system: aarch64-darwin
+
+    # Dynamically set the runner based on the matrix 'os' variable
+    runs-on: ${{ matrix.os }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -23,5 +35,6 @@ jobs:
           name: antoinecarnec # Replace with your cachix cache name
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
-      - name: Build Nix Packages
-        run: nix build --print-out-paths
+      - name: Build Nix Package
+        # Dynamically build the package for the correct system
+        run: nix build
