--- a/.github/workflows/cachix.yaml
+++ b/.github/workflows/cachix.yaml
@@ -34,6 +34,9 @@ jobs:
         with:
           name: antoinecarnec # Replace with your cachix cache name
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+          useDaemon: false
+          pathsToPush: result
+          
 
       - name: Build Nix Package
         # Dynamically build the package for the correct system
