feat: Update `rbw` to a newer development revision and improve Nix build command in CI.

--- a/.github/workflows/cachix.yaml
+++ b/.github/workflows/cachix.yaml
@@ -40,4 +40,4 @@ jobs:
 
       - name: Build Nix Package
         # Dynamically build the package for the correct system
-        run: nix build
+        run: nix -L build -o result
